# Meshwatch

./: .env.example  .gitignore  Dockerfile.dashboard  Dockerfile.serving  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  promote-model.yml
configs/: base.yaml  prometheus.yml  prometheus_rules.yml  serve.yaml
configs/feast/: feature_store.yaml  features.py
configs/grafana/dashboards/: 01_operational.json  02_model_performance.json  03_agent_analytics.json  04_infrastructure.json
configs/grafana/provisioning/dashboards/: dashboards.yml
configs/grafana/provisioning/datasources/: datasource.yml
dashboard/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
dashboard/src/: App.tsx  main.tsx
dashboard/src/api/: client.ts  types.ts  ws.ts
dashboard/src/components/: NavBar.tsx
dashboard/src/components/charts/: FraudRateGauge.tsx  LatencyMonitor.tsx  ScoreDistributionChart.tsx
dashboard/src/components/feed/: AlertCounter.tsx  TransactionFeed.tsx
dashboard/src/components/network/: NetworkGraph.tsx
dashboard/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Empty.tsx  Skeleton.tsx  Stat.tsx
dashboard/src/lib/: chart-theme.ts  colors.ts  format.ts
dashboard/src/pages/: AlertPage.tsx  CasesPage.tsx  DashboardPage.tsx  ModelPage.tsx  NetworkPage.tsx
dashboard/src/store/: alerts.ts  cases.ts
dashboard/src/styles/: globals.css
dashboard/tests/: api-client.test.ts  format.test.ts  setup.ts  stores.test.ts
dashboard/tests/components/: Badge.test.tsx  Pages.test.tsx  TransactionFeed.test.tsx
docs/: ARCHITECTURE.md  BENCHMARKS.md
linkedin/: narration.md
medium/: article.md  capture_ai_panel.py  capture_dashboard.py  capture_dependent.py  make_images.py
notebooks/: 01_eda.ipynb  02_graph.ipynb  03_gnn.ipynb  04_ensemble.ipynb  05_agent.ipynb  06_colab_training.ipynb
scripts/: build_graph.py  demo.py  demo_stream.py  download_data.py  evaluate.py  investigate.py  monitor.py  preprocess.py  serve.py  split_data.py  train.py  train_ensemble.py
src/fraud_detection/: __init__.py
src/fraud_detection/agent/: __init__.py  case_bank.py  graph.py  llm.py  neo4j_adapter.py  prompts.py  report.py  state.py  tools.py  tracing.py
src/fraud_detection/data/: __init__.py  download.py  graph_builder.py  preprocessing.py  splits.py
src/fraud_detection/features/: __init__.py  aggregated.py  graph_features.py  pipeline.py  temporal.py
src/fraud_detection/models/: __init__.py  ensemble.py  gnn_layers.py  hetero_gnn.py  losses.py  xgboost_model.py
src/fraud_detection/monitoring/: __init__.py  alerts.py  drift.py  performance.py  registry.py  reports.py  shadow.py  state.py
src/fraud_detection/serving/: __init__.py  app.py  middleware.py  predictor.py  ray_deployment.py  redis_cache.py  schemas.py  security.py
src/fraud_detection/streaming/: __init__.py  kafka_consumer.py  kafka_producer.py
src/fraud_detection/training/: __init__.py  callbacks.py  evaluator.py  trainer.py
src/fraud_detection/utils/: __init__.py  config.py  logging.py
tests/: conftest.py
tests/integration/: __init__.py  test_e2e_flow.py
tests/unit/: test_agent_case_bank.py  test_agent_endpoint.py  test_agent_graph.py  test_agent_llm.py  test_agent_neo4j_adapter.py  test_agent_report.py  test_agent_state.py  test_agent_tools.py  test_callbacks.py  test_config.py  test_download.py  test_ensemble.py  test_evaluator.py  test_features.py  test_gnn_layers.py  test_graph_builder.py  test_hetero_gnn.py  test_kafka_streaming.py  test_logging.py  test_losses.py  test_monitor_script.py  test_monitoring_alerts.py  test_monitoring_drift.py  test_monitoring_endpoint.py  test_monitoring_performance.py  test_monitoring_registry.py  test_monitoring_reports.py  test_monitoring_shadow.py  test_predictor.py  test_preprocessing.py  test_redis_cache.py  test_schemas.py  test_security_middleware.py  test_serving_app.py  test_serving_middleware_units.py  test_splits.py  test_trainer.py  test_xgboost_model.py
